add code to calculate two random numbers for the game question

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <div class="game-area">
         <div class="controls-area">
+            
+<!-- The data-type attribute is a custom data attribute in HTML. It allows developers to store extra information inside an element, which can be used in JavaScript to make webpages more interactive -->
 
             <button data-type="addition" class="btn btn--big btn--green">
                 <i class="fas fa-plus"></i>
