--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="game-area">
         <div class="controls-area">
-            
+
 <!-- The data-type attribute is a custom data attribute in HTML. It allows developers to store extra information inside an element, which can be used in JavaScript to make webpages more interactive -->
 
             <button data-type="addition" class="btn btn--big btn--green">
@@ -45,7 +45,7 @@
             <span id="operator">x</span>
             <span id="operand2">0</span>
             <span>=</span>
-            <p class="answer-message">Entrer Answer</p>
+            <p class="answer-message">Enter Answer</p>
             <input id="answer-box" type="number">
         </div>
         <button data-type="submit" class="btn btn--grey">Submit Answer</button>
